--- a/core/frame/standard/init/src/softbus_server.cfg
+++ b/core/frame/standard/init/src/softbus_server.cfg
@@ -10,7 +10,9 @@
             "name" : "softbus_server",
             "path" : ["/system/bin/sa_main", "/system/profile/softbus_server.xml"],
             "uid" : "dsoftbus",
-            "gid" : ["dsoftbus", "system", "shell"]
+            "gid" : ["dsoftbus", "system", "shell"],
+            "permission" : ["ohos.permission.PERMISSION_USED_STATS"],
+            "permission_acls" : ["ohos.permission.PERMISSION_USED_STATS"]
         }
     ]
 }
