--- a/core/frame/standard/init/src/softbus_server_musl.cfg
+++ b/core/frame/standard/init/src/softbus_server_musl.cfg
@@ -11,7 +11,9 @@
             "path" : ["/system/bin/sa_main", "/system/profile/softbus_server.xml"],
             "uid" : "dsoftbus",
             "gid" : ["dsoftbus", "system", "shell"],
-            "secon" : "u:r:softbus_server:s0"
+            "secon" : "u:r:softbus_server:s0",
+            "permission" : ["ohos.permission.PERMISSION_USED_STATS"],
+            "permission_acls" : ["ohos.permission.PERMISSION_USED_STATS"]
         }
     ]
 }
