--- a/core/frame/standard/init/src/softbus_server_musl.cfg
+++ b/core/frame/standard/init/src/softbus_server_musl.cfg
@@ -12,8 +12,7 @@
             "uid" : "dsoftbus",
             "gid" : ["dsoftbus", "system", "shell"],
             "secon" : "u:r:softbus_server:s0",
-            "permission" : ["ohos.permission.PERMISSION_USED_STATS"],
-            "permission_acls" : ["ohos.permission.PERMISSION_USED_STATS"]
+            "permission" : ["ohos.permission.PERMISSION_USED_STATS"]
         }
     ]
 }
