--- a/adapter/BUILD.gn
+++ b/adapter/BUILD.gn
@@ -49,7 +49,20 @@ if (defined(ohos_lite)) {
             [ "$hispark_pegasus_sdk_path/third_party/lwip_sack/include" ]
         defines = [ "HISPARK_PEGASUS_USE_NETIF_GET_ADDR" ]
       }
-      cflags = [ "-Wall" ]
+      if (board_toolchain_type == "iccarm") {
+        include_dirs += [
+          "//third_party/lwip/src/include",
+          "//kernel/liteos_m/components/net/lwip-2.1/porting/include",
+        ]
+        cflags = [
+          "--diag_suppress",
+          "Pe226",
+        ]
+        cflag_cc = cflags
+        ldflags = [ "-lpthread" ]
+      } else {
+        cflags = [ "-Wall" ]
+      }
       sources = [
         "$softbus_adapter_common/bus_center/platform/bus_center_adapter.c",
         "$softbus_adapter_common/kernel/liteos_a/softbus_adapter_socket.c",
