--- a/core/common/BUILD.gn
+++ b/core/common/BUILD.gn
@@ -110,9 +110,7 @@ if (defined(ohos_lite)) {
     include_dirs += conn_common_inc + trans_common_inc
     sources = common_utils_src
     sources += conn_common_src + trans_common_src
-    dfx_source = [
-      "dfx/hisysevent_adapter/softbus_hisysevt_common.c",
-    ]
+    dfx_source = [ "dfx/hisysevent_adapter/softbus_hisysevt_common.c" ]
     sources += dfx_source
     defines = [ "DEFAULT_STORAGE_PATH=\"/data/service/el1/public\"" ]
     defines += [ "SOFTBUS_STANDARD_SYSTEM" ]
