fixed 6ae7ce0 from https://gitee.com/fuxing-xiaopang/communication_dsoftbus/pulls/1971 【非功能】UT优化
Signed-off-by: “sunweifu” <sunweifu@huawei.com>

--- a/tests/sdk/transmission/integration_test/BUILD.gn
+++ b/tests/sdk/transmission/integration_test/BUILD.gn
@@ -27,10 +27,7 @@ ohos_executable("softbus_test_server") {
 
 ohos_unittest("softbus_file_testsuite") {
   module_out_path = module_output_path
-  sources = [
-    "device_manager.cpp",
-    "file_test.cpp",
-  ]
+  sources = [ "device_manager.cpp" ]
 
   include_dirs = [
     "$dsoftbus_root_path/core/common/include",
