--- a/core/common/BUILD.gn
+++ b/core/common/BUILD.gn
@@ -130,6 +130,7 @@ if (defined(ohos_lite)) {
       "dfx/hidumper_adapter/softbus_hidumper_nstack.c",
       "dfx/hidumper_adapter/softbus_hidumper_trans.c",
       "dfx/hidumper_adapter/softbus_hidumper_buscenter.c",
+      "dfx/hisysevent_adapter/softbus_hisysevt_bus_center.c",
     ]
     sources += dfx_source
     defines = [ "DEFAULT_STORAGE_PATH=\"/data/service/el1/public\"" ]
