--- a/core/bus_center/lnn/lane_hub/lane_hub.gni
+++ b/core/bus_center/lnn/lane_hub/lane_hub.gni
@@ -29,6 +29,7 @@ bus_center_hub_inc = [
   "$core_lane_hub_path/lane_manager/include",
   "$core_lane_hub_path/time_sync/include",
   "$core_lane_hub_path/heartbeat/include/",
+  "$core_lane_hub_path/lane_qos/include/",
 ]
 bus_center_hub_deps = []
 
@@ -97,6 +98,13 @@ if (dsoftbus_feature_lnn_net && dsoftbus_feature_lnn_time_sync && enhanced) {
 }
 if (dsoftbus_feature_lnn_net && dsoftbus_feature_lnn_heartbeat && enhanced) {
   bus_center_hub_deps += [ "$dsoftbus_root_path/dsoftbus_enhance/core/bus_center/lnn/lane_hub/heartbeat:dsoftbus_heartbeat_impl" ]
+}
+if (dsoftbus_feature_lnn_net && dsoftbus_feature_qos && enhanced) {
+  bus_center_hub_deps += [ "$dsoftbus_root_path/dsoftbus_enhance/core/bus_center/lnn/lane_hub/lane_statistics:dsoftbus_lane_statistics" ]
+  bus_center_hub_deps += [ "$dsoftbus_root_path/dsoftbus_enhance/core/bus_center/lnn/lane_hub/lane_qos:dsoftbus_lane_qos" ]
+} else {
+  bus_center_hub_src +=
+      [ "$core_lane_hub_path/lane_qos/lnn_lane_qos_virtual.c" ]
 }
 
 if (enhanced) {
