--- a/core/common/BUILD.gn
+++ b/core/common/BUILD.gn
@@ -56,24 +56,29 @@ if (defined(ohos_lite)) {
       "$hilog_lite_include_path",
     ]
     include_dirs += conn_common_inc + trans_common_inc
-    cflags = [
-      "-ffunction-sections",
-      "-fdata-sections",
-      "-Os",
-    ]
-    cflags_cc = cflags
+    if (board_toolchain_type != "iccarm") {
+      cflags = [
+        "-ffunction-sections",
+        "-fdata-sections",
+        "-Os",
+      ]
+      cflags_cc = cflags
+    }
   }
 
   target(build_type, "softbus_utils") {
     include_dirs = [ "$dsoftbus_root_path/interfaces/kits/common" ]
     include_dirs += conn_common_inc + trans_common_inc
+    dfx_src = [ "dfx/hisysevent_adapter/softbus_hisysevt_common_virtual.c" ]
     sources = common_utils_src
-    sources += conn_common_src + trans_common_src
-    cflags = [
-      "-Wall",
-      "-fPIC",
-      "-std=c99",
-    ]
+    sources += conn_common_src + trans_common_src + dfx_src
+    if (board_toolchain_type != "iccarm") {
+      cflags = [
+        "-Wall",
+        "-fPIC",
+        "-std=c99",
+      ]
+    }
     if (ohos_kernel_type == "liteos_m") {
       defines = [ "SOFTBUS_MINI_SYSTEM" ]
       defines += [ "__STDC_FORMAT_MACROS" ]
@@ -108,6 +113,7 @@ if (defined(ohos_lite)) {
     sources = common_utils_src
     sources += conn_common_src + trans_common_src
     dfx_source = [
+      "dfx/hisysevent_adapter/softbus_hisysevt_common.c",
       "dfx/hidumper_adapter/softbus_hidumper.c",
       "dfx/hidumper_adapter/softbus_hidumper_disc.c",
       "dfx/hidumper_adapter/softbus_hidumper_conn.c",
