传输模块的HiDumper实现
Signed-off-by: breakfei1 <zhangshen6@huawei.com>

--- a/core/common/BUILD.gn
+++ b/core/common/BUILD.gn
@@ -118,6 +118,7 @@ if (defined(ohos_lite)) {
       "dfx/hidumper_adapter/softbus_hidumper_disc.c",
       "dfx/hidumper_adapter/softbus_hidumper_conn.c",
       "dfx/hidumper_adapter/softbus_hidumper_nstack.c",
+      "dfx/hidumper_adapter/softbus_hidumper_trans.c",
     ]
     sources += dfx_source
     defines = [ "DEFAULT_STORAGE_PATH=\"/data/service/el1/public\"" ]
