--- a/adapter/BUILD.gn
+++ b/adapter/BUILD.gn
@@ -65,6 +65,7 @@ if (defined(ohos_lite)) {
       }
       sources = [
         "$softbus_adapter_common/bus_center/platform/bus_center_adapter.c",
+        "$softbus_adapter_common/dfx/softbus_adapter_hisysevent_mini.c",
         "$softbus_adapter_common/kernel/liteos_a/softbus_adapter_socket.c",
         "$softbus_adapter_common/kernel/liteos_a/softbus_adapter_thread.c",
         "$softbus_adapter_common/kernel/liteos_m/lnn_ip_utils_adapter.c",
