--- a/core/common/BUILD.gn
+++ b/core/common/BUILD.gn
@@ -54,6 +54,8 @@ if (defined(ohos_lite)) {
     include_dirs = [
       "$dsoftbus_root_path/core/common/include",
       "$dsoftbus_root_path/interfaces/kits/common",
+      "$dsoftbus_root_path/core/common/dfx/hidumper_adapter/include",
+      "$dsoftbus_root_path/core/common/dfx/hisysevent_adapter/include",
       "$softbus_adapter_common/include",
       "$hilog_lite_include_path",
     ]
