--- a/adapter/BUILD.gn
+++ b/adapter/BUILD.gn
@@ -103,6 +103,7 @@ if (defined(ohos_lite)) {
       cflags_cc = [ "-fPIC" ]
       sources = [
         "$softbus_adapter_common/bus_center/platform/bus_center_adapter.c",
+        "$softbus_adapter_common/dfx/softbus_adapter_hisysevent_mini.c",
         "$softbus_adapter_common/kernel/liteos_a/lnn_ip_utils_adapter.c",
         "$softbus_adapter_common/kernel/liteos_a/softbus_adapter_file.c",
         "$softbus_adapter_common/kernel/liteos_a/softbus_adapter_mem.c",
