--- a/core/common/BUILD.gn
+++ b/core/common/BUILD.gn
@@ -75,7 +75,7 @@ if (defined(ohos_lite)) {
     include_dirs += conn_common_inc + trans_common_inc
     dfx_src = [ "dfx/hidumper_adapter/softbus_hidumper_trans_virtual.c" ]
     sources = common_utils_src
-    sources += conn_common_src + trans_common_src
+    sources += conn_common_src + trans_common_src + dfx_src
     if (board_toolchain_type != "iccarm") {
       cflags = [
         "-Wall",
