--- a/components/nstackx/nstackx_util/BUILD.gn
+++ b/components/nstackx/nstackx_util/BUILD.gn
@@ -38,7 +38,6 @@ if (defined(ohos_lite)) {
   if (ohos_kernel_type == "liteos_m") {
     static_library("nstackx_util.open") {
       cflags += [
-        "-Wall",
         "-D_GNU_SOURCE",
         "-DNSTACKX_WITH_LITEOS",
         "-DLWIP_DONT_PROVIDE_BYTEORDER_FUNCTIONS",
@@ -47,6 +46,9 @@ if (defined(ohos_lite)) {
         "-DNSTACKX_WITH_LITEOS_M",
         "-DENABLE_USER_LOG",
       ]
+      if (board_toolchain_type != "iccarm") {
+        cflags += [ "-Wall" ]
+      }
       cflags_cc = cflags
       include_dirs = [
         "include",
@@ -164,11 +166,17 @@ if (defined(ohos_lite)) {
 
   ohos_shared_library("nstackx_util.open") {
     cflags += [
-      "-Wall",
       "-DMBEDTLS_INCLUDED",
       "-DNSTACKX_WITH_HMOS_LINUX",
       "-DENABLE_USER_LOG",
     ]
+    if (defined(board_toolchain_type)) {
+      if (board_toolchain_type != "iccarm") {
+        cflags += [ "-Wall" ]
+      }
+    } else {
+      cflags += [ "-Wall" ]
+    }
     cflags_cc = cflags
     include_dirs = [
       "include",
