--- a/components/nstackx/nstackx_util/BUILD.gn
+++ b/components/nstackx/nstackx_util/BUILD.gn
@@ -63,6 +63,7 @@ if (defined(ohos_lite)) {
       ]
 
       sources += [
+        "core/nstackx_getopt.c",
         "platform/liteos/sys_epoll.c",
         "platform/liteos/sys_event.c",
         "platform/liteos/sys_log.c",
@@ -95,6 +96,7 @@ if (defined(ohos_lite)) {
         sources = [
           "core/nstackx_dev.c",
           "core/nstackx_event.c",
+          "core/nstackx_getopt.c",
           "core/nstackx_log.c",
           "core/nstackx_mbedtls.c",
           "core/nstackx_socket.c",
@@ -130,6 +132,7 @@ if (defined(ohos_lite)) {
         sources = [
           "core/nstackx_dev.c",
           "core/nstackx_event.c",
+          "core/nstackx_getopt.c",
           "core/nstackx_log.c",
           "core/nstackx_mbedtls.c",
           "core/nstackx_socket.c",
@@ -182,6 +185,7 @@ if (defined(ohos_lite)) {
     sources = [
       "core/nstackx_dev.c",
       "core/nstackx_event.c",
+      "core/nstackx_getopt.c",
       "core/nstackx_log.c",
       "core/nstackx_mbedtls.c",
       "core/nstackx_socket.c",
