--- a/adapter/BUILD.gn
+++ b/adapter/BUILD.gn
@@ -36,7 +36,7 @@ if (defined(ohos_lite)) {
     "$dsoftbus_root_path/interfaces/kits",
     "$dsoftbus_root_path/interfaces/kits/common",
     "//utils/native/base/include",
-    "//base/startup/syspara_lite/interfaces/innerkits/native/syspara/include",
+    "//base/startup/init/interfaces/innerkits/include/syspara",
     "//third_party/bounds_checking_function/include",
   ]
 
@@ -111,7 +111,7 @@ if (defined(ohos_lite)) {
       ]
       deps = [
         "//base/hiviewdfx/hilog_lite/frameworks/featured:hilog_shared",
-        "//base/startup/syspara_lite/frameworks/parameter/src:sysparam",
+        "//base/startup/init/interfaces/innerkits:libbegetutil",
         "//third_party/bounds_checking_function:libsec_shared",
       ]
 
@@ -141,7 +141,7 @@ if (defined(ohos_lite)) {
     include_dirs = [
       "$dsoftbus_root_path/interfaces/kits",
       "$dsoftbus_root_path/interfaces/kits/common",
-      "//base/startup/syspara_lite/interfaces/innerkits/native/syspara/include",
+      "//base/startup/init/interfaces/innerkits/include/syspara",
       "//utils/native/base/include",
       "//third_party/bounds_checking_function/include",
     ]
@@ -158,7 +158,7 @@ if (defined(ohos_lite)) {
       "$softbus_adapter_common/log/softbus_adapter_log.c",
     ]
     public_deps = [
-      "//base/startup/syspara_lite/interfaces/innerkits/native/syspara:syspara",
+      "//base/startup/init/interfaces/innerkits:libbegetutil",
       "//third_party/bounds_checking_function:libsec_static",
       "//utils/native/base:utils",
     ]
