add hisysevent in disc & conn
Signed-off-by: w00644978 <wudy062379@126.com>

--- a/core/common/BUILD.gn
+++ b/core/common/BUILD.gn
@@ -29,6 +29,8 @@ common_utils_src = [
   "utils/softbus_utils.c",
   "dfx/hisysevent_adapter/softbus_hisysevt_common.c",
   "dfx/hisysevent_adapter/softbus_hisysevt_transreporter.c",
+  "dfx/hisysevent_adapter/softbus_hisysevt_discreporter.c",
+  "dfx/hisysevent_adapter/softbus_hisysevt_connreporter.c",
 ]
 
 if (defined(ohos_lite)) {
