--- a/core/common/BUILD.gn
+++ b/core/common/BUILD.gn
@@ -79,6 +79,8 @@ if (defined(ohos_lite)) {
     dfx_src = [
       "dfx/hidumper_adapter/softbus_hidumper_trans_virtual.c",
       "dfx/hidumper_adapter/softbus_hidumper_buscenter_virtual.c",
+      "dfx/hidumper_adapter/softbus_hidumper_disc_virtual.c",
+      "dfx/hidumper_adapter/softbus_hidumper_conn_virtual.c",
       "dfx/hidumper_adapter/softbus_hidumper_interface_virtual.c",
     ]
     sources = common_utils_src
