--- a/core/connection/br/conn_br.gni
+++ b/core/connection/br/conn_br.gni
@@ -20,6 +20,7 @@ if (dsoftbus_feature_conn_br == false) {
       [ "$dsoftbus_root_path/core/connection/br/src/br_connection_virtual.c" ]
   br_connection_inc = [
     "$dsoftbus_root_path/core/connection/br/include",
+    "$dsoftbus_root_path/core/common/include",
     "//third_party/cJSON",
   ]
 } else {
@@ -34,6 +35,7 @@ if (dsoftbus_feature_conn_br == false) {
   ]
   br_connection_inc += [
     "$dsoftbus_root_path/core/connection/br/include",
+    "$dsoftbus_root_path/core/common/include",
     "//third_party/cJSON",
   ]
 }
