reorganize ble monitor in heartbeat to lnn monitor
Signed-off-by: jeosif <liubao6@huawei.com>
Change-Id: I147f99a0bf7cc76def363a8ef2dbe6dc734b80f4

--- a/adapter/common/bus_center/bus_center_adapter.gni
+++ b/adapter/common/bus_center/bus_center_adapter.gni
@@ -101,3 +101,15 @@ if (defined(ohos_lite)) {
     }
   }
 }
+
+if (dsoftbus_feature_lnn_net) {
+  if (dsoftbus_feature_conn_br || dsoftbus_feature_conn_ble) {
+    bus_center_adapter_src +=
+        [ "$adapter_bus_center_path/network/lnn_bt_monitor.c" ]
+    bus_center_adapter_inc +=
+        [ "$softbus_adapter_common/net/bluetooth/include" ]
+  } else {
+    bus_center_adapter_src +=
+        [ "$adapter_bus_center_path/network/lnn_bt_monitor_virtual.c" ]
+  }
+}
