--- a/core/common/BUILD.gn
+++ b/core/common/BUILD.gn
@@ -82,6 +82,7 @@ if (defined(ohos_lite)) {
       "dfx/hidumper_adapter/softbus_hidumper_disc_virtual.c",
       "dfx/hidumper_adapter/softbus_hidumper_conn_virtual.c",
       "dfx/hidumper_adapter/softbus_hidumper_interface_virtual.c",
+      "dfx/hisysevent_adapter/softbus_hisysevt_nstack_virtual.c",
     ]
     sources = common_utils_src
     sources += conn_common_src + trans_common_src + dfx_src
@@ -137,6 +138,7 @@ if (defined(ohos_lite)) {
       "dfx/hidumper_adapter/softbus_hidumper_nstack.c",
       "dfx/hidumper_adapter/softbus_hidumper_trans.c",
       "dfx/hidumper_adapter/softbus_hidumper_buscenter.c",
+      "dfx/hisysevent_adapter/softbus_hisysevt_nstack.c",
     ]
     sources += dfx_source
     defines = [ "DEFAULT_STORAGE_PATH=\"/data/service/el1/public\"" ]
