--- a/core/bus_center/lnn/lane_hub/lane_hub.gni
+++ b/core/bus_center/lnn/lane_hub/lane_hub.gni
@@ -28,8 +28,8 @@ bus_center_hub_inc = [
   "$core_lane_hub_path/common/include",
   "$core_lane_hub_path/lane_manager/include",
   "$core_lane_hub_path/time_sync/include",
-  "$core_lane_hub_path/heartbeat/include/",
-  "$core_lane_hub_path/lane_qos/include/",
+  "$core_lane_hub_path/heartbeat/include",
+  "$core_lane_hub_path/lane_qos/include",
 ]
 bus_center_hub_deps = []
 
@@ -69,27 +69,27 @@ if (dsoftbus_feature_lnn_net) {
         [ "$core_lane_hub_path/time_sync/src/lnn_time_sync_manager_virtual.c" ]
   }
   if (dsoftbus_feature_lnn_heartbeat) {
-    bus_center_hub_inc +=
-        [ "$dsoftbus_core_path/connection/p2p/common/include/p2plink_type.h" ]
+    bus_center_hub_inc += [ "$dsoftbus_core_path/connection/p2p/interface" ]
     bus_center_hub_src += [
-      "$core_lane_hub_path/heartbeat/src/lnn_heartbeat_strategy.c",
-      "$core_lane_hub_path/heartbeat/src/lnn_heartbeat_manager.c",
+      "$core_lane_hub_path/heartbeat/src/lnn_heartbeat_ctrl.c",
       "$core_lane_hub_path/heartbeat/src/lnn_heartbeat_fsm.c",
+      "$core_lane_hub_path/heartbeat/src/lnn_heartbeat_medium_mgr.c",
+      "$core_lane_hub_path/heartbeat/src/lnn_heartbeat_strategy.c",
+      "$core_lane_hub_path/heartbeat/src/lnn_heartbeat_utils.c",
     ]
     if (!enhanced) {
-      bus_center_hub_src += [
-        "$core_lane_hub_path/heartbeat/src/lnn_ble_heartbeat_impl_virtual.c",
-      ]
+      bus_center_hub_src +=
+          [ "$core_lane_hub_path/heartbeat/src/lnn_ble_heartbeat_virtual.c" ]
     }
   } else {
     bus_center_hub_src +=
-        [ "$core_lane_hub_path/heartbeat/src/lnn_heartbeat_strategy_virtual.c" ]
+        [ "$core_lane_hub_path/heartbeat/src/lnn_heartbeat_ctrl_virtual.c" ]
   }
 } else {
   bus_center_hub_src = [
     "$core_lane_hub_path/common/src/lnn_lane_hub_virtual.c",
     "$core_lane_hub_path/time_sync/src/lnn_time_sync_manager_virtual.c",
-    "$core_lane_hub_path/heartbeat/src/lnn_heartbeat_strategy_virtual.c",
+    "$core_lane_hub_path/heartbeat/src/lnn_heartbeat_ctrl_virtual.c",
   ]
 }
 
