--- a/core/common/BUILD.gn
+++ b/core/common/BUILD.gn
@@ -124,6 +124,7 @@ if (defined(ohos_lite)) {
       "$dsoftbus_root_path/components/nstackx/fillp/include",
       "$dsoftbus_root_path/components/nstackx/nstackx_core/dfile/interface",
       "$dsoftbus_root_path/components/nstackx/nstackx_util/interface",
+      "$dsoftbus_root_path/components/nstackx/nstackx_ctrl/interface",
       "//third_party/cJSON",
       "//third_party/bounds_checking_function/include",
     ]
@@ -153,6 +154,7 @@ if (defined(ohos_lite)) {
       "$dsoftbus_root_path/adapter:softbus_adapter",
       "$dsoftbus_root_path/components/nstackx/fillp:FillpSo.open",
       "$dsoftbus_root_path/components/nstackx/nstackx_core/dfile:nstackx_dfile.open",
+      "$dsoftbus_root_path/components/nstackx/nstackx_ctrl:nstackx_ctrl",
       "$dsoftbus_root_path/components/nstackx/nstackx_util:nstackx_util.open",
       "//third_party/bounds_checking_function:libsec_shared",
       "//third_party/cJSON:cjson_static",
