--- a/core/bus_center/lnn/lane_hub/lane_hub.gni
+++ b/core/bus_center/lnn/lane_hub/lane_hub.gni
@@ -111,6 +111,7 @@ if (enhanced) {
   lane_channel_rating_src_path = "$dsoftbus_root_path/dsoftbus_enhance/core/bus_center/lnn/lane_hub/lane_channel_rating"
   bus_center_hub_inc += [ "$lane_channel_rating_src_path/include" ]
   bus_center_hub_src += [
+    "$lane_channel_rating_src_path/src/channel_rating_v2.c",
     "$lane_channel_rating_src_path/src/channel_rating_v1.c",
     "$lane_channel_rating_src_path/src/lnn_rating_manager.c",
     "$lane_channel_rating_src_path/src/wlan_channel_collector.c",
