[dfinder] 支持控制信令打印
Signed-off-by: wanghan <wanghan76@huawei.com>

--- a/components/nstackx/nstackx_ctrl/BUILD.gn
+++ b/components/nstackx/nstackx_ctrl/BUILD.gn
@@ -101,6 +101,7 @@ if (defined(ohos_lite)) {
         "core/nstackx_dfinder_hidump.c",
         "core/nstackx_dfinder_hievent.c",
         "core/nstackx_dfinder_log.c",
+        "core/nstackx_dfinder_mgt_msg_log.c",
         "core/nstackx_smartgenius.c",
         "core/nstackx_statistics.c",
       ]
@@ -132,6 +133,7 @@ if (defined(ohos_lite)) {
       cflags += [
         "-fPIC",
         "-std=c99",
+        "-DDFINDER_MGT_MSG_LOG",
       ]
       cflags_cc = cflags
       ldflags = [
@@ -148,6 +150,7 @@ if (defined(ohos_lite)) {
     include_dirs = [ "interface" ]
   }
   ohos_shared_library("nstackx_ctrl") {
+    cflags += [ "-DDFINDER_MGT_MSG_LOG" ]
     cflags_cc = cflags
     sources = [
       "core/coap_discover/coap_app.c",
@@ -160,6 +163,7 @@ if (defined(ohos_lite)) {
       "core/nstackx_dfinder_hidump.c",
       "core/nstackx_dfinder_hievent.c",
       "core/nstackx_dfinder_log.c",
+      "core/nstackx_dfinder_mgt_msg_log.c",
       "core/nstackx_smartgenius.c",
       "core/nstackx_statistics.c",
     ]
