liteos_m设备添加sys_socket.c文件参与编译
Signed-off-by: fangye <fangye@talkweb.com.cn>
Change-Id: Ifd757f7ead3d9594d8af7fe9d27749e90f948460

--- a/components/nstackx/nstackx_util/BUILD.gn
+++ b/components/nstackx/nstackx_util/BUILD.gn
@@ -69,6 +69,7 @@ if (defined(ohos_lite)) {
         "platform/liteos/sys_epoll.c",
         "platform/liteos/sys_event.c",
         "platform/liteos/sys_log.c",
+        "platform/liteos/sys_socket.c",
         "platform/liteos/sys_timer.c",
         "platform/liteos/sys_util.c",
       ]
