屏蔽iccarm编译器{0}初始化告警，兼容现有编译器逻辑
Signed-off-by: samuel.shi <shixintao1@huawei.com>

--- a/core/common/BUILD.gn
+++ b/core/common/BUILD.gn
@@ -63,6 +63,11 @@ if (defined(ohos_lite)) {
         "-Os",
       ]
       cflags_cc = cflags
+    } else {
+      cflags = [
+        "--diag_suppress",
+        "Pe188",
+      ]
     }
   }
 
