--- a/tests/sdk/discovery/fuzztest/BUILD.gn
+++ b/tests/sdk/discovery/fuzztest/BUILD.gn
@@ -1,4 +1,4 @@
-# Copyright (c) 2021 Huawei Device Co., Ltd.
+# Copyright (c) 2022 Huawei Device Co., Ltd.
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
 # You may obtain a copy of the License at
@@ -11,13 +11,12 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-group("unittest") {
+group("fuzztest") {
   testonly = true
   deps = [
-    "ble:softbus_conn_ble_test",
-    "br:softbus_conn_br_test",
-    "common:softbus_conn_common_test",
-    "manager:softbus_conn_manager_test",
-    "tcp:softbus_tcp_manager_test",
+    "publishservice_fuzzer:fuzztest",
+    "startdiscovery_fuzzer:fuzztest",
+    "stopdiscovery_fuzzer:fuzztest",
+    "unpublishservice_fuzzer:fuzztest",
   ]
 }
