link libsec_shared in nstackx_util
Signed-off-by: yangyang <yangyang203@huawei.com>

--- a/components/nstackx/nstackx_util/BUILD.gn
+++ b/components/nstackx/nstackx_util/BUILD.gn
@@ -115,6 +115,7 @@ if (defined(ohos_lite)) {
         ]
         deps = [
           "//base/hiviewdfx/hilog_lite/frameworks/featured:hilog_shared",
+          "//third_party/bounds_checking_function:libsec_shared",
           "//third_party/mbedtls",
         ]
       } else if (ohos_kernel_type == "linux") {
