Fix the link fault of L0 device
Signed-off-by: breakfei1 <zhangshen6@huawei.com>

--- a/core/transmission/trans_channel/udp_negotiation/udp_negotiation.gni
+++ b/core/transmission/trans_channel/udp_negotiation/udp_negotiation.gni
@@ -22,6 +22,9 @@ if (dsoftbus_feature_trans_udp == true) {
     "$udp_channel_path/src/trans_udp_negotiation_exchange.c",
   ]
 } else {
-  trans_udp_channel_src = [ "$udp_channel_path/src/trans_udp_virtual.c" ]
+  trans_udp_channel_src = [
+    "$udp_channel_path/src/trans_udp_virtual.c",
+    "$udp_channel_path/src/trans_udp_channel_manager_virtual.c",
+  ]
 }
 trans_udp_channel_inc = [ "$udp_channel_path/include" ]
