--- a/adapter/BUILD.gn
+++ b/adapter/BUILD.gn
@@ -30,6 +30,9 @@ if (defined(ohos_lite)) {
       "$dsoftbus_root_path/core/common/include",
       "$hilog_lite_include_path",
     ]
+    if (board_name == "v200zr") {
+      defines = [ "DSOFTBUS_V200ZR" ]
+    }
   }
 
   common_include = [
@@ -71,6 +74,22 @@ if (defined(ohos_lite)) {
         "$softbus_adapter_common/range/softbus_adapter_range.c",
         "$softbus_adapter_config/spec_config/softbus_config_adapter.c",
       ]
+      if (board_name == "v200zr") {
+        sources = []
+        sources = [
+          "$softbus_adapter_common/bus_center/platform/bus_center_adapter.c",
+          "$softbus_adapter_common/dfx/softbus_adapter_hisysevent_mini.c",
+          "$softbus_adapter_common/kernel/liteos_a/softbus_adapter_file.c",
+          "$softbus_adapter_common/kernel/liteos_a/softbus_adapter_socket.c",
+          "$softbus_adapter_common/kernel/liteos_a/softbus_adapter_thread.c",
+          "$softbus_adapter_common/kernel/liteos_m/lnn_ip_utils_adapter.c",
+          "$softbus_adapter_common/kernel/liteos_m/softbus_adapter_mem.c",
+          "$softbus_adapter_common/kernel/liteos_m/softbus_adapter_timer.c",
+          "$softbus_adapter_common/log/softbus_adapter_log.c",
+          "$softbus_adapter_common/range/softbus_adapter_range.c",
+          "$softbus_adapter_config/spec_config/softbus_config_adapter.c",
+        ]
+      }
 
       deps = [ "//base/hiviewdfx/hilog_lite/frameworks/mini:hilog_lite" ]
 
