--- a/tests/core/bus_center/lnn/BUILD.gn
+++ b/tests/core/bus_center/lnn/BUILD.gn
@@ -73,7 +73,22 @@ ohos_unittest("LNNTest") {
   }
 }
 
+native_source_path = rebase_path("$dsoftbus_root_path")
+dep_dir = "dsoftbus_enhance/core/bus_center/lnn/lane_hub"
+enhanced_test = exec_script("$dsoftbus_root_path/check_sub_module.py",
+                            [
+                              "$native_source_path",
+                              "$dep_dir",
+                            ],
+                            "value")
+
 group("unittest") {
   testonly = true
   deps = [ ":LNNTest" ]
+  if (enhanced_test) {
+    deps += [
+      "$dsoftbus_root_path/dsoftbus_enhance/test/core/bus_center/lnn/lane_hub/lane_channel_rating:unittest",
+      "$dsoftbus_root_path/dsoftbus_enhance/test/core/bus_center/lnn/unittest:unittest",
+    ]
+  }
 }
