fix: add qos ut test
Signed-off-by: xusai <xusai4@huawei.com>

--- a/tests/core/bus_center/lnn/BUILD.gn
+++ b/tests/core/bus_center/lnn/BUILD.gn
@@ -86,6 +86,9 @@ group("unittest") {
   testonly = true
   deps = [ ":LNNTest" ]
   if (enhanced_test) {
-    deps += [ "$dsoftbus_root_path/dsoftbus_enhance/test/core/bus_center/lnn/lane_hub/lane_channel_rating:unittest" ]
+    deps += [
+      "$dsoftbus_root_path/dsoftbus_enhance/test/core/bus_center/lnn/lane_hub/lane_channel_rating:unittest",
+      "$dsoftbus_root_path/dsoftbus_enhance/test/core/bus_center/lnn/unittest:unittest",
+    ]
   }
 }
