--- a/tests/core/common/dfx/BUILD.gn
+++ b/tests/core/common/dfx/BUILD.gn
@@ -48,8 +48,30 @@ if (defined(ohos_lite)) {
       external_deps = [ "hilog:libhilog" ]
     }
   }
+
+  ohos_unittest("TransDfxTest") {
+    module_out_path = module_output_path
+    sources = [ "trans_dfx_test.cpp" ]
+    include_dirs = [
+      "$dsoftbus_root_path/core/common/include",
+      "$dsoftbus_root_path/core/common/dfx/hisysevent_adapter/include",
+    ]
+    deps = [
+      "$dsoftbus_root_path/core/common:softbus_utils",
+      "$dsoftbus_root_path/core/frame:softbus_server",
+    ]
+    if (is_standard_system) {
+      external_deps = [ "hiviewdfx_hilog_native:libhilog" ]
+    } else {
+      external_deps = [ "hilog:libhilog" ]
+    }
+  }
+
   group("unittest") {
     testonly = true
-    deps = [ ":LnnDfxTest" ]
+    deps = [
+      ":LnnDfxTest",
+      ":TransDfxTest",
+    ]
   }
 }
