--- a/components/nstackx/nstackx_util/BUILD.gn
+++ b/components/nstackx/nstackx_util/BUILD.gn
@@ -61,11 +61,13 @@ if (defined(ohos_lite)) {
       sources = [
         "core/nstackx_event.c",
         "core/nstackx_log.c",
+        "core/nstackx_socket.c",
         "core/nstackx_timer.c",
       ]
 
       sources += [
         "core/nstackx_getopt.c",
+        "platform/liteos/sys_dev.c",
         "platform/liteos/sys_epoll.c",
         "platform/liteos/sys_event.c",
         "platform/liteos/sys_log.c",
