account ctrl heartbeat process
Signed-off-by: jeosif <liubao6@huawei.com>
Change-Id: I20cd0b2f740a6a21d71eee8ab1c85cd4343e8ce1

--- a/core/adapter/core_adapter.gni
+++ b/core/adapter/core_adapter.gni
@@ -49,6 +49,7 @@ if (defined(ohos_lite)) {
 
     bus_center_core_adapter_inc = [
       "$dsoftbus_root_path/adapter/common/bus_center/include",
+      "$dsoftbus_root_path/adapter/common/include",
       "$dsoftbus_root_path/core/adapter/bus_center/include",
       "//foundation/distributeddatamgr/relational_store/interfaces/inner_api/rdb/include",
       "//foundation/distributeddatamgr/relational_store/interfaces/inner_api/dataability/include",
