--- a/core/bus_center/lnn/lane_hub/lane_hub.gni
+++ b/core/bus_center/lnn/lane_hub/lane_hub.gni
@@ -69,7 +69,11 @@ if (dsoftbus_feature_lnn_net) {
         [ "$core_lane_hub_path/time_sync/src/lnn_time_sync_manager_virtual.c" ]
   }
   if (dsoftbus_feature_lnn_heartbeat) {
-    bus_center_hub_inc += [ "$dsoftbus_core_path/connection/p2p/interface" ]
+    bus_center_hub_inc += [
+      "$dsoftbus_core_path/core/adapter/bus_center/include",
+      "$dsoftbus_core_path/core/authentication/include",
+      "$dsoftbus_core_path/connection/p2p/interface",
+    ]
     bus_center_hub_src += [
       "$core_lane_hub_path/heartbeat/src/lnn_heartbeat_ctrl.c",
       "$core_lane_hub_path/heartbeat/src/lnn_heartbeat_fsm.c",
