软总线TCP模块相关UT测试用例整改
Signed-off-by: zhouguodong <zhouguodong2@huawei.com>

--- a/tests/core/connection/common/BUILD.gn
+++ b/tests/core/connection/common/BUILD.gn
@@ -24,6 +24,7 @@ ohos_unittest("softbus_conn_common_test") {
     "$dsoftbus_root_path/core/common/include",
     "$dsoftbus_root_path/adapter/common/include",
     "$dsoftbus_root_path/core/connection/interface",
+    "$dsoftbus_root_path/core/connection/manager",
     "$dsoftbus_root_path/core/connection/common/include",
     "//third_party/googletest/googletest/include",
     "//third_party/googletest/googletest/src",
