--- a/adapter/BUILD.gn
+++ b/adapter/BUILD.gn
@@ -50,6 +50,10 @@ if (defined(ohos_lite)) {
         defines = [ "HISPARK_PEGASUS_USE_NETIF_GET_ADDR" ]
       }
       if (board_toolchain_type == "iccarm") {
+        include_dirs += [
+          "//kernel/liteos_m/components/net/lwip-2.1/porting/include",
+          "//third_party/lwip/src/include",
+        ]
         cflags = [
           "--diag_suppress",
           "Pe226,Pe513",
