--- a/tests/sdk/transmission/trans_channel/BUILD.gn
+++ b/tests/sdk/transmission/trans_channel/BUILD.gn
@@ -52,7 +52,10 @@ if (defined(ohos_lite)) {
 } else {
   import("//build/test.gni")
 
-  trans_sdk_proxy_test_src = [ "proxy/client_trans_proxy_file_common_test.cpp" ]
+  trans_sdk_proxy_test_src = [
+    "proxy/client_trans_proxy_file_common_test.cpp",
+    "udp/stream/trans_sdk_comm_stream_test.cpp",
+  ]
 
   trans_sdk_proxy_test_inc =
       [ "$dsoftbus_root_path/sdk/transmission/trans_channel/proxy/include" ]
