add LNN UT test cases
Signed-off-by: chenbotong <chenbotong1@huawei.com>

--- a/tests/core/bus_center/lnn/BUILD.gn
+++ b/tests/core/bus_center/lnn/BUILD.gn
@@ -22,6 +22,10 @@ ohos_unittest("LNNTest") {
     "unittest/lane_test.cpp",
     "unittest/ledger_lane_hub_test.cpp",
     "unittest/net_builder_test.cpp",
+    "net_builder/lnn_topo_manager_test.cpp",
+    "net_builder/lnn_node_weight_test.cpp",
+    "net_builder/lnn_exchange_device_info_test.cpp",
+    "net_builder/lnn_sync_info_manager_test.cpp",
   ]
 
   include_dirs = [
